--- a/Projects/Blackjack-Business Websites V4/games.html
+++ b/Projects/Blackjack-Business Websites V4/games.html
@@ -57,13 +57,13 @@ function setItemCookie(cname, cvalue, exdays){
             <td>
 				<center>Blackjack<br><small>Price: <em>$50</em></small>
 				<img id="gameimg" src="blackjack.jpg"/>
-				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button>
+				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button><br><button onClick="blackjack.html">Play Game Trial</button>
 				<br><div id="bj"></div></center>
 			</td>
 			<td>
 				<center>Battleship<br><small>Price: <em>$175</em></small>
 				<img src="battleship.jpg" id="gameimg"/>
-				<button onClick=shoppingCart.add("Battle Ship")>Add Item To Cart</button>
+				<button id="ln" onClick=shoppingCart.add("Battle Ship")>Add Item To Cart</button>
 				</center>
 			</td>
 			
