--- a/Projects/Blackjack-Business Websites V4/login.html
+++ b/Projects/Blackjack-Business Websites V4/login.html
@@ -6,6 +6,28 @@
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
+<script>
+	function setCookie(cname, cvalue, exdays){
+	var d = new Date();
+    d.setTime(d.getTime() + (1*24*60*60*1000));
+    var expires = "expires="+d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires;
+}
+	function getCookie(cname){
+	var name = cname;
+	var ca = document.cookie.split(";");
+		for(var i=0; i<ca.length; i++) {
+      	  var c = ca[i];
+      	  while (c.charAt(0)==' ') c = c.substring(1);
+      	  if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
+    	}
+    	return "";
+	}
+
+	function ceckLogin(cookie){
+			
+	}
+</script>
 </head>
 
 <body>
@@ -34,7 +56,7 @@
 
 
 <div class="formdiv">
-	<form name="loginform" action="login.html" method="get" id="loginform">
+	<form name="loginform" action="login.html" method="get" id="loginform" onsubmit="checkLogin()">
 				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
 				<input name="password" type="password" /><div id="headerlogin">Password</div><br>
 				<input type="submit" text="Submit" value="Submit"/>
