--- a/Projects/Blackjack-Business Websites V4/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V4/registercomplete.html
@@ -27,7 +27,7 @@ function setCookie(cname, cvalue, exdays){
     var expires = "expires="+d.toUTCString();
     document.cookie = cname + "=" + cvalue + "; " + expires;
 }
-function getCookie(){
+function getCookie(cname){
 	var name = cname;
 	var ca = document.cookie.split(";");
 	for(var i=0; i<ca.length; i++) {
@@ -35,7 +35,19 @@ function getCookie(){
         while (c.charAt(0)==' ') c = c.substring(1);
         if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
     }
-     return ;
+    return "";
+}
+// Check Cookie - modify for specific field
+function checkCookie() {
+	var username=getCookie("username");
+		if (username!="") {
+		alert("Welcome again " + username);
+	}else{
+		username = prompt("Please enter your name:", "");
+		if (username != "" && username != null) {
+						setCookie("username", username, 365);
+		}
+	}
 }
 </script>
 </head>
@@ -65,25 +77,10 @@ var str = JSON.stringify($_GET).replace("%40", "@");
 var email = $_GET.email.value;
 var ttl = 1;
 var exdays = 1;
-var cnameHolder = $_GET.email.split("@");
-var cname = cnameHolder[0]+$_GET["firstname"];
 //SET AND GET COOKIE
-setCookie(cname, ttl, exdays);
-getCookie();
+setCookie("loggedIn", ttl, exdays);
+document.write(getCookie("loggedIn"));
 //call get cookie function
-
-var infoHolder1 = str.split(",");
-var infoHolder1 = infoHolder1.split("=");
-//function splitInfo(){
-//	for(i in infoHolder1){
-//		infoHolder[i].split(":");
-//	}
-//}
-//var infoHolder2 = function splitInfo();
-//document.write(infHolder2);
-for(i in infoHolder1){
-	document.write(infoHolder1[i]+"<br>");
-}
 
 
 
