--- a/Projects/Blackjack-Business Websites V4/login.html
+++ b/Projects/Blackjack-Business Websites V4/login.html
@@ -24,9 +24,9 @@
     	return "";
 	}
 
-	function ceckLogin(cookie){
-			
-	}
+//	function ceckLogin(cookie){
+//			if(){};
+//	}
 </script>
 </head>
 
