--- a/Projects/Blackjack-Business Websites V4/blackjack.html
+++ b/Projects/Blackjack-Business Websites V4/blackjack.html
@@ -5,7 +5,6 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="blackjackstylesheet.css">
 <link type="text/javascript" href="blackjack.js">
-<link type="text/javascript" href="login.js">
 <script>
 function getCookie(cname){
 	var name = cname;
@@ -19,18 +18,14 @@ function getCookie(cname){
 }
 </script>
 </head>
-
-<body id="BlackJackBody">
+<img src="cards/c1.png">
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln1"><a href="login.html">Login</a></li>
-            <li id="ln1"><a href="register.html">Register</a></li>
             <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln"><a href="logout.html">Log Out</a></li>
 		</ul>
 </header>
 <script>
@@ -39,6 +34,236 @@ function loaded() {
 	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, you can play the game a total of 5 times before prompted to purchase the game. Please enjoy! :) ~A.S 'Reevo'" );
 }
 	window.onload = loaded();
+// ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+//`````````````````CLUBS```````````````````````````
+	var c1 = {
+		img:"cards/c1.png",
+		value: if(player.cards.value>10){
+			this.value = 1;
+		}else{
+			this.value = 10;
+		}
+	}
+	var	c2 = {
+		img:"cards/c2.png",
+		value: 2	
+	}
+	 var c3 = {
+		img:"cards/c3.png",
+		value:3	
+	}
+	var c4 = {
+		img:"cards/c4.png",
+		value: 4
+	}
+	var c5 = {
+		img:"cards/c5.png",
+		value: 5	
+	}
+	var c6 = {
+		img:"cards/c6.png",
+		value: 6	
+	}
+	var c7 = {
+		img:"cards/c7.png",
+		value: 7	
+	}
+	var c8 = {
+		img:"cards/c8.png",
+		value: 8	
+	}
+	var c9 = {
+		img:"cards/c9.png",
+		value:9	
+	}
+	var c10 = {
+		img:"cards/c10.png",
+		value:10	
+	}
+	var c11 = {
+		img:"cards/c11.png",
+		value:10
+	}
+	var c12 = {
+		img:"cards/c12.png",
+		value:10
+	}
+	var c13 = {
+		img:"cards/c13.png",
+		value:10	
+	}
+//```````````````DIAMONDS```````````````````````````
+	var d1 = {
+		img:"cards/1.png",
+		value: if(player.cards.value>10){
+			this.value = 1;
+		}else{
+			this.value = 10;
+		}
+	}
+	var	d2 = {
+		img:"cards/d2.png",
+		value: 2	
+	}
+	 var d3 = {
+		img:"cards/d3.png",
+		value:3	
+	}
+	var d4 = {
+		img:"cards/d4.png",
+		value: 4
+	}
+	var d5 = {
+		img:"cards/d5.png",
+		value: 5	
+	}
+	var d6 = {
+		img:"cards/d6.png",
+		value: 6	
+	}
+	var d7 = {
+		img:"cards/d7.png",
+		value: 7	
+	}
+	var d8 = {
+		img:"cards/8.png",
+		value: 8	
+	}
+	var 9 = {
+		img:"cards/d9.png",
+		value:9	
+	}
+	var d10 = {
+		img:"cards/d10.png",
+		value:10	
+	}
+	var d11 = {
+		img:"cards/d11.png",
+		value:10
+	}
+	var d12 = {
+		img:"cards/d12.png",
+		value:10
+	}
+	var d13 = {
+		img:"cards/d13.png",
+		value:10	
+	}
+//``````````````````````````````SPADES``````````````````````````
+	var s1 = {
+		img:"cards/s1.png",
+		value: if(player.cards.value>10){
+			this.value = 1;
+		}else{
+			this.value = 10;
+		}
+	}
+	var	s2 = {
+		img:"cards/s2.png",
+		value: 2	
+	}
+	 var s3 = {
+		img:"cards/s3.png",
+		value:3	
+	}
+	var s4 = {
+		img:"cards/s4.png",
+		value: 4
+	}
+	var s5 = {
+		img:"cards/s5.png",
+		value: 5	
+	}
+	var s6 = {
+		img:"cards/s6.png",
+		value: 6	
+	}
+	var s7 = {
+		img:"cards/s7.png",
+		value: 7	
+	}
+	var s8 = {
+		img:"cards/s8.png",
+		value: 8	
+	}
+	var s9 = {
+		img:"cards/s9.png",
+		value:9	
+	}
+	var s10 = {
+		img:"cards/s10.png",
+		value:10	
+	}
+	var s11 = {
+		img:"cards/s11.png",
+		value:10
+	}
+	var s12 = {
+		img:"cards/s12.png",
+		value:10
+	}
+	var s13 = {
+		img:"cards/s13.png",
+		value:10	
+	}
+//`````````````````````````````````````````````````HEARTS````````````````````````````
+	var h1 = {
+		img:"cards/1.png",
+		value: if(player.cards.value>10){
+			this.value = 1;
+		}else{
+			this.value = 10;
+		}
+	}
+	var	h2 = {
+		img:"cards/h2.png",
+		value: 2	
+	}
+	 var h3 = {
+		img:"cards/h3.png",
+		value:3	
+	}
+	var h4 = {
+		img:"cards/h4.png",
+		value: 4
+	}
+	var h5 = {
+		img:"cards/h5.png",
+		value: 5	
+	}
+	var h6 = {
+		img:"cards/h6.png",
+		value: 6	
+	}
+	var h7 = {
+		img:"cards/h7.png",
+		value: 7	
+	}
+	var h8 = {
+		img:"cards/h8.png",
+		value: 8	
+	}
+	var h9 = {
+		img:"cards/h9.png",
+		value:9	
+	}
+	var h10 = {
+		img:"cards/h10.png",
+		value:10	
+	}
+	var h11 = {
+		img:"cards/h11.png",
+		value:10
+	}
+	var h12 = {
+		img:"cards/h12.png",
+		value:10
+	}
+	var h13 = {
+		img:"cards/h13.png",
+		value:10	
+	}
+//==============================END OF CARDS ===============================
 </script>
    <div class="messageArea">
    		
@@ -82,7 +307,7 @@ function loaded() {
 		</tr>
    </table>
 	<script src="blackjack.js">
- 
+ 	
 		while(turn<6){
 		console.log(turn);
 		shuffle();
@@ -100,7 +325,7 @@ function loaded() {
 				turn++;
 			}
 		}
-
+	
    </script>
 </body>
 </html>
