--- a/Projects/Blackjack-Business Websites V4/index.html
+++ b/Projects/Blackjack-Business Websites V4/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <title>Reevo Inc Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
 <script>
 function getCookie(cname){
@@ -23,6 +22,7 @@ function getCookie(cname){
 <body>
 <script>
 	getCookie()
+</script>
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -31,6 +31,7 @@ function getCookie(cname){
             <li><a href="about.html">About</a></li>
             <li id="ln1"><a href="login.html">Login</a></li>
             <li id="ln1"><a href="register.html">Register</a></li>
+            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
             <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
             <li id="ln"><a href="logout.html">Log Out</a></li>
             
