Added append piece not working yet Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V4/blackjack.html
+++ b/Projects/Blackjack-Business Websites V4/blackjack.html
@@ -18,7 +18,7 @@ function getCookie(cname){
 }
 </script>
 </head>
-<img src="cards/c1.png">
+<body id="BlackJackBody">
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
