Final push for in Lab, organized files into folders Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V4/blackjack.html
+++ b/Projects/Blackjack-Business Websites V4/blackjack.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="blackjackstylesheet.css">
-<link type="text/javascript" href="blackjack.js">
+<link type="text/javascript" href="scripts/blackjack.js">
 <script>
 function getCookie(cname){
 	var name = cname;
@@ -20,7 +20,7 @@ function getCookie(cname){
 </head>
 <body id="BlackJackBody">-
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
