--- a/Projects/Blackjack-Business Websites V4/index.html
+++ b/Projects/Blackjack-Business Websites V4/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Reevo Inc Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="shopping.js">
+<link type="text/javascript" href="scripts/shopping.js">
 <script>
 function getCookie(cname){
 	var name = cname;
@@ -24,7 +24,7 @@ function getCookie(cname){
 	getCookie()
 </script>
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
