--- a/Projects/Blackjack-Business Websites V4/games.html
+++ b/Projects/Blackjack-Business Websites V4/games.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Reevo Inc Games</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="shopping.js">
+<link type="text/javascript" href="scripts/shopping.js">
 <script>
 checkLogin();
 if(loggedIn == false){
@@ -32,7 +32,7 @@ function getCookie(cname){
 
 <body>
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
@@ -57,20 +57,20 @@ function getCookie(cname){
     	<tr>
         	<td>
 				<center>Connect 4<br><small>Price: <em>$45</em></small><br>
-				<img src="connect4.jpg"/>
+				<img src="images/connect4.jpg"/>
 				<button onClick=shoppingCart.add(connectFour)>Add Item To Cart</button>
 				</center>
 			</td>
 			<!--BLACKJACK CONTAINER-->
             <td>
 				<center>Blackjack<br><small>Price: <em>$50</em></small>
-				<img id="gameimg" src="blackjack.jpg"/>
+				<img id="gameimg" src="images/blackjack.jpg"/>
 				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button><br><button id="ln" onClick="blackjack.html">Play Game Trial</button>
 				<br><div id="bj"></div></center>
 			</td>
 			<td>
 				<center>Battleship<br><small>Price: <em>$175</em></small>
-				<img src="battleship.jpg" id="gameimg"/>
+				<img src="images/battleship.jpg" id="gameimg"/>
 				<button  onClick=shoppingCart.add("Battle Ship")>Add Item To Cart</button>
 				</center>
 			</td>
