--- a/Projects/Blackjack-Business Websites V4/login.html
+++ b/Projects/Blackjack-Business Websites V4/login.html
@@ -33,7 +33,7 @@
 <body>
 
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
