--- a/Projects/Blackjack-Business Websites V4/register.html
+++ b/Projects/Blackjack-Business Websites V4/register.html
@@ -67,7 +67,7 @@
 
 <body id="Register">
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
@@ -98,6 +98,6 @@
             
 	            
 </div>
-	<img class="registerimg" src="reevoEmptyBackGround.png"/>
+	<img class="registerimg" src="images/reevoEmptyBackGround.png"/>
 </body>
 </html>
