--- a/Projects/Blackjack-Business Websites V4/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V4/registercomplete.html
@@ -68,7 +68,7 @@ function checkLogin(){
 
 </script>
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
