Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V4/blackjack.html
+++ b/Projects/Blackjack-Business Websites V4/blackjack.html
@@ -153,8 +153,7 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}
-	}
+		}}
 	var	c2 = {
 		img:"cards/c2.png",
 		value: 2	}
@@ -200,8 +199,7 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}
-	}
+		}}
 	var	d2 = {
 		img:"cards/d2.png",
 		value: 2	}
@@ -247,56 +245,43 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}
-	}
+		}}
 	var	s2 = {
 		img:"cards/s2.png",
-		value: 2	
-	}
+		value: 2	}
 	 var s3 = {
 		img:"cards/s3.png",
-		value:3	
-	}
+		value:3	}
 	var s4 = {
 		img:"cards/s4.png",
-		value: 4
-	}
+		value: 4}
 	var s5 = {
 		img:"cards/s5.png",
-		value: 5	
-	}
+		value: 5	}
 	var s6 = {
 		img:"cards/s6.png",
-		value: 6	
-	}
+		value: 6	}
 	var s7 = {
 		img:"cards/s7.png",
-		value: 7	
-	}
+		value: 7	}
 	var s8 = {
 		img:"cards/s8.png",
-		value: 8	
-	}
+		value: 8	}
 	var s9 = {
 		img:"cards/s9.png",
-		value:9	
-	}
+		value:9	}
 	var s10 = {
 		img:"cards/s10.png",
-		value:10	
-	}
+		value:10	}
 	var s11 = {
 		img:"cards/s11.png",
-		value:10
-	}
+		value:10}
 	var s12 = {
 		img:"cards/s12.png",
-		value:10
-	}
+		value:10}
 	var s13 = {
 		img:"cards/s13.png",
-		value:10	
-	}
+		value:10	}
 //`````````````````````````````````````````````````HEARTS````````````````````````````
 	var h1 = {
 		img:"cards/1.png",
@@ -306,58 +291,45 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}
-	}
+		}}
 	var	h2 = {
 		img:"cards/h2.png",
-		value: 2	
-	}
+		value: 2	}
 	 var h3 = {
 		img:"cards/h3.png",
-		value:3	
-	}
+		value:3	}
 	var h4 = {
 		img:"cards/h4.png",
-		value: 4
-	}
+		value: 4}
 	var h5 = {
 		img:"cards/h5.png",
-		value: 5	
-	}
+		value: 5	}
 	var h6 = {
 		img:"cards/h6.png",
-		value: 6	
-	}
+		value: 6	}
 	var h7 = {
 		img:"cards/h7.png",
-		value: 7	
-	}
+		value: 7	}
 	var h8 = {
 		img:"cards/h8.png",
-		value: 8	
-	}
+		value: 8	}
 	var h9 = {
 		img:"cards/h9.png",
-		value:9	
-	}
+		value:9	}
 	var h10 = {
 		img:"cards/h10.png",
-		value:10	
-	}
+		value:10	}
 	var h11 = {
 		img:"cards/h11.png",
-		value:10
-	}
+		value:10}
 	var h12 = {
 		img:"cards/h12.png",
-		value:10
-	}
+		value:10}
 	var h13 = {
 		img:"cards/h13.png",
-		value:10	
-	}
+		value:10	}
 //==============================END OF CARDS ===============================
-]
+];
 	while(turn<6){
 		var x = document.getElementById("messageArea");
 		console.log(turn);
