--- a/Projects/Blackjack-Business Websites V4/blackjack.html
+++ b/Projects/Blackjack-Business Websites V4/blackjack.html
@@ -36,7 +36,7 @@ function shuffle(deck){
 };
 
 //THE PLAYER
-player = {
+var player = {
 	cards:{
 		deck:[],
 		Count:0,
@@ -47,7 +47,7 @@ player = {
 };
 
 //THE DEALER
-dealer = {
+var dealer = {
 	cards:{
 		deck:[],
 		Count:0,
@@ -145,7 +145,7 @@ function loaded() {
 deck = [
 // ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 //`````````````````CLUBS```````````````````````````
-	var c1 = {
+	c1 = {
 		img:"cards/c1.png",
 		value: function checkValue(){
 				if(player.cards.value>10){
@@ -153,45 +153,45 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}}
-	var	c2 = {
+		}},
+		c2 = {
 		img:"cards/c2.png",
-		value: 2	}
-	 var c3 = {
+		value: 2	},
+	 c3 = {
 		img:"cards/c3.png",
-		value:3	}
-	var c4 = {
+		value:3	},
+	c4 = {
 		img:"cards/c4.png",
-		value: 4}
-	var c5 = {
+		value: 4},
+	c5 = {
 		img:"cards/c5.png",
-		value: 5	}
-	var c6 = {
+		value: 5	},
+	c6 = {
 		img:"cards/c6.png",
-		value: 6	}
-	var c7 = {
+		value: 6	},
+	c7 = {
 		img:"cards/c7.png",
-		value: 7	}
-	var c8 = {
+		value: 7	},
+	c8 = {
 		img:"cards/c8.png",
-		value: 8	}
-	var c9 = {
+		value: 8	},
+	c9 = {
 		img:"cards/c9.png",
-		value:9	}
-	var c10 = {
+		value:9	},
+	c10 = {
 		img:"cards/c10.png",
-		value:10	}
-	var c11 = {
+		value:10	},
+	c11 = {
 		img:"cards/c11.png",
-		value:10}
-	var c12 = {
+		value:10},
+	c12 = {
 		img:"cards/c12.png",
-		value:10}
-	var c13 = {
+		value:10},
+	c13 = {
 		img:"cards/c13.png",
-		value:10	}
+		value:10	},
 //```````````````DIAMONDS```````````````````````````
-	var d1 = {
+	d1 = {
 		img:"cards/1.png",
 		value: function checkValue(){
 				if(player.cards.value>10){
@@ -199,45 +199,45 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}}
-	var	d2 = {
+		}},
+	d2 = {
 		img:"cards/d2.png",
-		value: 2	}
-	 var d3 = {
+		value: 2	},
+	d3 = {
 		img:"cards/d3.png",
-		value:3	}
-	var d4 = {
+		value:3	},
+	d4 = {
 		img:"cards/d4.png",
-		value: 4}
-	var d5 = {
+		value: 4},
+	d5 = {
 		img:"cards/d5.png",
-		value: 5	}
-	var d6 = {
+		value: 5	},
+	d6 = {
 		img:"cards/d6.png",
-		value: 6	}
-	var d7 = {
+		value: 6	},
+	d7 = {
 		img:"cards/d7.png",
-		value: 7	}
-	var d8 = {
+		value: 7	},
+	d8 = {
 		img:"cards/8.png",
-		value: 8	}
-	var d9 = {
+		value: 8	},
+	d9 = {
 		img:"cards/d9.png",
-		value:9	}
-	var d10 = {
+		value:9	},
+	d10 = {
 		img:"cards/d10.png",
-		value:10	}
-	var d11 = {
+		value:10	},
+	d11 = {
 		img:"cards/d11.png",
-		value:10}
-	var d12 = {
+		value:10},
+	d12 = {
 		img:"cards/d12.png",
-		value:10}
-	var d13 = {
+		value:10},
+	d13 = {
 		img:"cards/d13.png",
-		value:10	}
+		value:10	},
 //``````````````````````````````SPADES``````````````````````````
-	var s1 = {
+	s1 = {
 		img:"cards/s1.png",
 		value: function checkValue(){
 				if(player.cards.value>10){
@@ -245,45 +245,45 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}}
-	var	s2 = {
+		}},
+	s2 = {
 		img:"cards/s2.png",
-		value: 2	}
-	 var s3 = {
+		value: 2	},
+	s3 = {
 		img:"cards/s3.png",
-		value:3	}
-	var s4 = {
+		value:3	},
+	s4 = {
 		img:"cards/s4.png",
-		value: 4}
-	var s5 = {
+		value: 4},
+	s5 = {
 		img:"cards/s5.png",
-		value: 5	}
-	var s6 = {
+		value: 5	},
+	s6 = {
 		img:"cards/s6.png",
-		value: 6	}
-	var s7 = {
+		value: 6	},
+	s7 = {
 		img:"cards/s7.png",
-		value: 7	}
-	var s8 = {
+		value: 7	},
+	s8 = {
 		img:"cards/s8.png",
-		value: 8	}
-	var s9 = {
+		value: 8	},
+	s9 = {
 		img:"cards/s9.png",
-		value:9	}
-	var s10 = {
+		value:9	},
+	s10 = {
 		img:"cards/s10.png",
-		value:10	}
-	var s11 = {
+		value:10	},
+	s11 = {
 		img:"cards/s11.png",
-		value:10}
-	var s12 = {
+		value:10},
+	s12 = {
 		img:"cards/s12.png",
-		value:10}
-	var s13 = {
+		value:10},
+	s13 = {
 		img:"cards/s13.png",
-		value:10	}
+		value:10	},
 //`````````````````````````````````````````````````HEARTS````````````````````````````
-	var h1 = {
+	h1 = {
 		img:"cards/1.png",
 		value: function checkValue(){
 				if(player.cards.value>10){
@@ -291,41 +291,41 @@ deck = [
 			}else{
 				this.value = 10;
 			 }
-		}}
-	var	h2 = {
+		}},
+	h2 = {
 		img:"cards/h2.png",
-		value: 2	}
-	 var h3 = {
+		value: 2	},
+	h3 = {
 		img:"cards/h3.png",
-		value:3	}
-	var h4 = {
+		value:3	},
+	h4 = {
 		img:"cards/h4.png",
-		value: 4}
-	var h5 = {
+		value: 4},
+	h5 = {
 		img:"cards/h5.png",
-		value: 5	}
-	var h6 = {
+		value: 5	},
+	h6 = {
 		img:"cards/h6.png",
-		value: 6	}
-	var h7 = {
+		value: 6	},
+	h7 = {
 		img:"cards/h7.png",
-		value: 7	}
-	var h8 = {
+		value: 7	},
+	h8 = {
 		img:"cards/h8.png",
-		value: 8	}
-	var h9 = {
+		value: 8	},
+	h9 = {
 		img:"cards/h9.png",
-		value:9	}
-	var h10 = {
+		value:9	},
+	h10 = {
 		img:"cards/h10.png",
-		value:10	}
-	var h11 = {
+		value:10	},
+	h11 = {
 		img:"cards/h11.png",
-		value:10}
-	var h12 = {
+		value:10},
+	h12 = {
 		img:"cards/h12.png",
-		value:10}
-	var h13 = {
+		value:10},
+	h13 = {
 		img:"cards/h13.png",
 		value:10	}
 //==============================END OF CARDS ===============================
