--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -5,7 +5,7 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="blackjackstylesheet.css">
 <script>
-	//THE PLAYER
+//THE PLAYER
 var player = {
 	Hit: playerDealCard(),
 	Hold: function playerhold(){
@@ -31,13 +31,89 @@ var dealer = {
 };
 var turn = 1;
 var playing = true;
-var dealerCards = []; //Dealers Cards
-var playerCards = []; //Players Cards
-var bet;
-var money;
-var moneyDisplay;
-var message;
-var deck = new Array;
+//DEFINE THE DECK==================================
+var deck = [
+// ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+//`````````````````CLUBS```````````````````````````
+	c1 = {
+		img:"cards/c1.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{ this.value = 10;}}},
+			  c2 = {img:"cards/c2.png", value: 2	},
+	 c3 = {img:"cards/c3.png",value:3},
+	c4 = {img:"cards/c4.png",value: 4},
+	c5 = {img:"cards/c5.png",value: 5},
+	c6 = {img:"cards/c6.png",value: 6},
+	c7 = {img:"cards/c7.png",value: 7},
+	c8 = {img:"cards/c8.png",value: 8},
+	c9 = {img:"cards/c9.png",value:9},
+	c10 = {img:"cards/c10.png",value:10},
+	c11 = {img:"cards/c11.png",value:10},
+	c12 = {img:"cards/c12.png",value:10},
+	c13 = {img:"cards/c13.png",value:10	},
+//```````````````DIAMONDS```````````````````````````
+	d1 = {
+		img:"cards/1.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{
+				this.value = 10; }}},
+	d2 = {img:"cards/d2.png",value: 2},
+	d3 = {img:"cards/d3.png",value:3},
+	d4 = {img:"cards/d4.png",value: 4},
+	d5 = {img:"cards/d5.png",value: 5},
+	d6 = {img:"cards/d6.png",value: 6},
+	d7 = {img:"cards/d7.png",value: 7},
+	d8 = {img:"cards/8.png",value: 8},
+	d9 = {img:"cards/d9.png",value:9},
+	d10 = {img:"cards/d10.png",value:10},
+	d11 = {img:"cards/d11.png",value:10},
+	d12 = {img:"cards/d12.png",value:10},
+	d13 = {img:"cards/d13.png",value:10	},
+//``````````````````````````````SPADES``````````````````````````
+	s1 = {
+		img:"cards/s1.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{this.value = 10;}}},
+	s2 = {img:"cards/s2.png",value: 2},
+	s3 = {img:"cards/s3.png",value:3},
+	s4 = {img:"cards/s4.png",value: 4},
+	s5 = {img:"cards/s5.png",value: 5},
+	s6 = {img:"cards/s6.png",value: 6},
+	s7 = {img:"cards/s7.png",value: 7},
+	s8 = {img:"cards/s8.png",value: 8},
+	s9 = {img:"cards/s9.png",value:9},
+	s10 = {img:"cards/s10.png",value:10},
+	s11 = {img:"cards/s11.png",value:10},
+	s12 = {img:"cards/s12.png",value:10},
+	s13 = {img:"cards/s13.png",value:10},
+//`````````````````````````````````````````````````HEARTS````````````````````````````
+	h1 = {
+		img:"cards/1.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{
+				this.value = 10;}}},
+	h2 = {img:"cards/h2.png",value: 2},
+	h3 = {img:"cards/h3.png",value:3},
+	h4 = {img:"cards/h4.png",value: 4},
+	h5 = {img:"cards/h5.png",value: 5},
+	h6 = {img:"cards/h6.png",value: 6},
+	h7 = {img:"cards/h7.png",value: 7},
+	h8 = {img:"cards/h8.png",value: 8},
+	h9 = {img:"cards/h9.png",value:9},
+	h10 = {img:"cards/h10.png",value:10},
+	h11 = {img:"cards/h11.png",value:10},
+	h12 = {img:"cards/h12.png",value:10},
+	h13 = {img:"cards/h13.png",value:10}
+//==============================END OF CARDS ===============================
+];
 
 //CREATE A DECK
 function shuffle(deck){
@@ -55,7 +131,6 @@ function shuffle(deck){
     deck[currentIndex] = deck[randomIndex];
     deck[randomIndex] = temporaryValue;
  	 }
-
   return deck;
 };
 
@@ -65,8 +140,8 @@ function dealerHold(){
 		console.log("Dealer is holding");
 }
 //HIT ~~~APPEND ATTEMPT~~~~~~
-function playerDealCard(card){
-	card = deck.slice(0,2);
+function playerDealCard(deck){
+	var card = deck.slice(0,2);
 	player.cards.Value += card["Value"];
 	var cardArea = document.getElementById("PlayerCard"+turn);
 	var node = document.createElement("IMG");
@@ -97,6 +172,10 @@ function getCookie(cname){
     }
     return "";
 }
+//WRITE MESSAGE TO THE MESSAGE AREA ID
+function writeMessage(message){
+	document.getElementById("messageArea").innerHTML=message;
+}
 </script>
 </head>
 <body id="BlackJackBody">-
@@ -110,7 +189,7 @@ function getCookie(cname){
 		</ul>
 </header>
 <script>
-
+	writeMessage(turn);
 </script>
    <div class="messageArea">
    		
@@ -162,203 +241,17 @@ function loaded() {
 	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, you can play the game a total of 5 times before prompted to purchase the game. Please enjoy! :) ~A.S 'Reevo'" );
 }
 	window.onload = loaded();
-//DEFINE THE DECK==================================
-deck = [
-// ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-//`````````````````CLUBS```````````````````````````
-	c1 = {
-		img:"cards/c1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;
-			 }
-		}},
-		c2 = {
-		img:"cards/c2.png",
-		value: 2	},
-	 c3 = {
-		img:"cards/c3.png",
-		value:3	},
-	c4 = {
-		img:"cards/c4.png",
-		value: 4},
-	c5 = {
-		img:"cards/c5.png",
-		value: 5	},
-	c6 = {
-		img:"cards/c6.png",
-		value: 6	},
-	c7 = {
-		img:"cards/c7.png",
-		value: 7	},
-	c8 = {
-		img:"cards/c8.png",
-		value: 8	},
-	c9 = {
-		img:"cards/c9.png",
-		value:9	},
-	c10 = {
-		img:"cards/c10.png",
-		value:10	},
-	c11 = {
-		img:"cards/c11.png",
-		value:10},
-	c12 = {
-		img:"cards/c12.png",
-		value:10},
-	c13 = {
-		img:"cards/c13.png",
-		value:10	},
-//```````````````DIAMONDS```````````````````````````
-	d1 = {
-		img:"cards/1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;
-			 }
-		}},
-	d2 = {
-		img:"cards/d2.png",
-		value: 2	},
-	d3 = {
-		img:"cards/d3.png",
-		value:3	},
-	d4 = {
-		img:"cards/d4.png",
-		value: 4},
-	d5 = {
-		img:"cards/d5.png",
-		value: 5	},
-	d6 = {
-		img:"cards/d6.png",
-		value: 6	},
-	d7 = {
-		img:"cards/d7.png",
-		value: 7	},
-	d8 = {
-		img:"cards/8.png",
-		value: 8	},
-	d9 = {
-		img:"cards/d9.png",
-		value:9	},
-	d10 = {
-		img:"cards/d10.png",
-		value:10	},
-	d11 = {
-		img:"cards/d11.png",
-		value:10},
-	d12 = {
-		img:"cards/d12.png",
-		value:10},
-	d13 = {
-		img:"cards/d13.png",
-		value:10	},
-//``````````````````````````````SPADES``````````````````````````
-	s1 = {
-		img:"cards/s1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;
-			 }
-		}},
-	s2 = {
-		img:"cards/s2.png",
-		value: 2	},
-	s3 = {
-		img:"cards/s3.png",
-		value:3	},
-	s4 = {
-		img:"cards/s4.png",
-		value: 4},
-	s5 = {
-		img:"cards/s5.png",
-		value: 5	},
-	s6 = {
-		img:"cards/s6.png",
-		value: 6	},
-	s7 = {
-		img:"cards/s7.png",
-		value: 7	},
-	s8 = {
-		img:"cards/s8.png",
-		value: 8	},
-	s9 = {
-		img:"cards/s9.png",
-		value:9	},
-	s10 = {
-		img:"cards/s10.png",
-		value:10	},
-	s11 = {
-		img:"cards/s11.png",
-		value:10},
-	s12 = {
-		img:"cards/s12.png",
-		value:10},
-	s13 = {
-		img:"cards/s13.png",
-		value:10	},
-//`````````````````````````````````````````````````HEARTS````````````````````````````
-	h1 = {
-		img:"cards/1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;
-			 }
-		}},
-	h2 = {
-		img:"cards/h2.png",
-		value: 2	},
-	h3 = {
-		img:"cards/h3.png",
-		value:3	},
-	h4 = {
-		img:"cards/h4.png",
-		value: 4},
-	h5 = {
-		img:"cards/h5.png",
-		value: 5	},
-	h6 = {
-		img:"cards/h6.png",
-		value: 6	},
-	h7 = {
-		img:"cards/h7.png",
-		value: 7	},
-	h8 = {
-		img:"cards/h8.png",
-		value: 8	},
-	h9 = {
-		img:"cards/h9.png",
-		value:9	},
-	h10 = {
-		img:"cards/h10.png",
-		value:10	},
-	h11 = {
-		img:"cards/h11.png",
-		value:10},
-	h12 = {
-		img:"cards/h12.png",
-		value:10},
-	h13 = {
-		img:"cards/h13.png",
-		value:10	}
-//==============================END OF CARDS ===============================
-];
+
+
 	while(turn<6){
-		var x = document.getElementById("messageArea");
+
 		console.log(turn);
+		
 		shuffle(deck);
-		player.Hit();
-		dealer.Hit();
-		x.innerHTML="Your cards are worth "+player.cards.Value;
-		x.innerHTML="<br>Hit or Hold";
+		player.Hit(deck[0]);
+		dealer.Hit(deck[0]);
+		writeMessage("Your cards are worth "+player.cards.Value);
+		writeMessage("<br>Hit or Hold");
 			if(player.cards.Value>21){
 				//DEALER WINS
 				console.log("Dealer has won");
