--- a/Projects/Project V 6/register.html
+++ b/Projects/Project V 6/register.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<link type="text/css" rel="stylesheet" href="stylesheet.css">
+<link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css">
 <link type="text/javascript" href="shopping.js">
 <script>
 //VALIDATE USERNAME!
