--- a/Projects/Project V 6/shoppingcart.html
+++ b/Projects/Project V 6/shoppingcart.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Reevo Inc Games</title>
-<link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="login.js">
-<link type="text/javascript" href="shopping.js">
-<link type="text/javascript" href="shopping.js">
+<link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css">
+<link type="text/javascript" href="scripts/login.js">
+<link type="text/javascript" href="scripts/shopping.js">
 <script>
 var check = getCookie("loggedIn");
 if(check == false){
