--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -5,21 +5,7 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/blackjackstylesheet.css">
 <script>
-//THE PLAYER
-var player = {
-	Hit: playerDealCard([],player),
-	Hold: function playerhold(){
-		var playing = false;
-		document.getElementById(Hit).disabled;
-		document.getElementById(Hold).disabled;
-},
-	cards:{
-		deck:new Array,
-		Count:0,
-		Value:0
-	},
-	CardPosition:1
-};
+
 //THE DEALER
 var dealer = {
 	cards:{
@@ -27,11 +13,21 @@ var dealer = {
 		Count:0,
 		Value:0
 	},
-	Hit: dealerDealCard([]),
+	Hit: function dealerDealCard(card){
+		card = deck.splice(0,1);
+		card = deck.splice(0,1);
+		dealer.cards.Value += card["Value"];
+		var cardArea = document.getElementById("DealerCard"+dealer.CardPosition);
+		var cardImage = card["img"]+"/>";
+		var node = document.createElement("IMG");
+		var att = document.createAttribute("src");
+		var cardImage = player.cards.deck[0].img+"/>";
+		att.value=cardImage;
+		node.setAttribute(att);
+},
 	Hold: dealerHold(),
 	CardPosition:1
 };
-var turn = 1;
 var playing = true;
 
 
@@ -59,30 +55,6 @@ function shuffle(deck){
 function dealerHold(){
 		console.log("Dealer is holding");
 }
-//HIT ~~~APPEND ATTEMPT~~~~~~
-function playerDealCard(deck,player){
-	var card = deck.splice(0,1);
-	console.log(card);
-	player.cards.Value += card["Value"];
-	var cardArea = document.getElementById("PlayerCard"+player.CardPosition);
-	var node = document.createElement("IMG");
-	var att = document.createAttribute("src");
-	var cardImage = card["img"]+"/>";
-	att.value=cardImage;
-	node.setAttribute(att);
-};
-//FOR WHEN THE DEALER HITS
-function dealerDealCard(card){
-	card = deck.splice(0,1);
-	dealer.cards.Value += card["Value"];
-	var cardArea = document.getElementById("DealerCard"+dealer.CardPosition);
-	var cardImage = card["img"]+"/>";
-	var node = document.createElement("IMG");
-	var att = document.createAttribute("src");
-	var cardImage = player.cards.deck[0].img+"/>";
-	att.value=cardImage;
-	node.setAttribute(att);
-};
 function getCookie(cname){
 	var name = cname;
 	var ca = document.cookie.split(";");
@@ -109,9 +81,6 @@ function writeMessage(message){
             <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
 		</ul>
 </header>
-<script>
-	writeMessage(turn);
-</script>
    <div class="messageArea">
    		
    </div>
@@ -155,6 +124,9 @@ function writeMessage(message){
 		Welcome to Blackjack!
    </div>
 	<script>
+//----------------!!!!!START OF GAME SCRIPT!!!!----------------
+	
+	
 //DEFINE THE DECK==================================
 var deck = [
 // ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -165,13 +137,13 @@ var deck = [
 				if(player.cards.value>10){
 				this.value = 1;
 			}else{ this.value = 10;}}},
-			  c2 = {img:"cards/c2.png", value: 2	},
-	 c3 = {img:"cards/c3.png",value:3},
-	c4 = {img:"cards/c4.png",value: 4},
-	c5 = {img:"cards/c5.png",value: 5},
-	c6 = {img:"cards/c6.png",value: 6},
-	c7 = {img:"cards/c7.png",value: 7},
-	c8 = {img:"cards/c8.png",value: 8},
+	c2 = {img:"cards/c2.png", value: 2},
+	c3 = {img:"cards/c3.png",value:3},
+	c4 = {img:"cards/c4.png",value:4},
+	c5 = {img:"cards/c5.png",value:5},
+	c6 = {img:"cards/c6.png",value:6},
+	c7 = {img:"cards/c7.png",value:7},
+	c8 = {img:"cards/c8.png",value:8},
 	c9 = {img:"cards/c9.png",value:9},
 	c10 = {img:"cards/c10.png",value:10},
 	c11 = {img:"cards/c11.png",value:10},
@@ -185,12 +157,12 @@ var deck = [
 				this.value = 1;
 			}else{
 				this.value = 10; }}},
-	d2 = {img:"cards/d2.png",value: 2},
+	d2 = {img:"cards/d2.png",value:2},
 	d3 = {img:"cards/d3.png",value:3},
-	d4 = {img:"cards/d4.png",value: 4},
-	d5 = {img:"cards/d5.png",value: 5},
-	d6 = {img:"cards/d6.png",value: 6},
-	d7 = {img:"cards/d7.png",value: 7},
+	d4 = {img:"cards/d4.png",value:4},
+	d5 = {img:"cards/d5.png",value:5},
+	d6 = {img:"cards/d6.png",value:6},
+	d7 = {img:"cards/d7.png",value:7},
 	d8 = {img:"cards/8.png",value: 8},
 	d9 = {img:"cards/d9.png",value:9},
 	d10 = {img:"cards/d10.png",value:10},
@@ -204,13 +176,13 @@ var deck = [
 				if(player.cards.value>10){
 				this.value = 1;
 			}else{this.value = 10;}}},
-	s2 = {img:"cards/s2.png",value: 2},
+	s2 = {img:"cards/s2.png",value:2},
 	s3 = {img:"cards/s3.png",value:3},
-	s4 = {img:"cards/s4.png",value: 4},
-	s5 = {img:"cards/s5.png",value: 5},
-	s6 = {img:"cards/s6.png",value: 6},
-	s7 = {img:"cards/s7.png",value: 7},
-	s8 = {img:"cards/s8.png",value: 8},
+	s4 = {img:"cards/s4.png",value:4},
+	s5 = {img:"cards/s5.png",value:5},
+	s6 = {img:"cards/s6.png",value:6},
+	s7 = {img:"cards/s7.png",value:7},
+	s8 = {img:"cards/s8.png",value:8},
 	s9 = {img:"cards/s9.png",value:9},
 	s10 = {img:"cards/s10.png",value:10},
 	s11 = {img:"cards/s11.png",value:10},
@@ -224,13 +196,13 @@ var deck = [
 				this.value = 1;
 			}else{
 				this.value = 10;}}},
-	h2 = {img:"cards/h2.png",value: 2},
+	h2 = {img:"cards/h2.png",value:2},
 	h3 = {img:"cards/h3.png",value:3},
-	h4 = {img:"cards/h4.png",value: 4},
-	h5 = {img:"cards/h5.png",value: 5},
-	h6 = {img:"cards/h6.png",value: 6},
-	h7 = {img:"cards/h7.png",value: 7},
-	h8 = {img:"cards/h8.png",value: 8},
+	h4 = {img:"cards/h4.png",value:4},
+	h5 = {img:"cards/h5.png",value:5},
+	h6 = {img:"cards/h6.png",value:6},
+	h7 = {img:"cards/h7.png",value:7},
+	h8 = {img:"cards/h8.png",value:8},
 	h9 = {img:"cards/h9.png",value:9},
 	h10 = {img:"cards/h10.png",value:10},
 	h11 = {img:"cards/h11.png",value:10},
@@ -262,9 +234,7 @@ function loaded(deck) {
 				console.log("player has won");
 				turn++;
 			}
-			
-	}
-	
+		}
 	}
 	window.onload = loaded(deck);
 
