--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -5,7 +5,31 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/blackjackstylesheet.css">
 <script>
-
+//THE PLAYER
+var player = {
+	Hit: function playerDealCard(deck,player){
+		var card = deck.splice(0,1);
+		console.log(card);
+		player.cards.Value += card["Value"];
+		var cardArea = document.getElementById("PlayerCard"+player.CardPosition);
+		var node = document.createElement("IMG");
+		var att = document.createAttribute("src");
+		var cardImage = card["img"]+"/>";
+		att.value=cardImage;
+		node.setAttribute(att);
+	},
+	Hold: function playerhold(){
+		var playing = false;
+		document.getElementById(Hit).disabled;
+		document.getElementById(Hold).disabled;
+},
+	cards:{
+		deck:new Array,
+		Count:0,
+		Value:0
+	},
+	CardPosition:1
+};
 //THE DEALER
 var dealer = {
 	cards:{
